--- a/drunkTest.html
+++ b/drunkTest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Stupid programm</title>
+	<title>Drunk Test</title>
 </head>
 <body>
 	<canvas height="600" width="600" style="border: 2px solid #000000; " fill id="myCanvas"></canvas>
